# trading-mcp

./: README.md  dev.sh  main.py  mcp_app.py  pyproject.toml
.agents/: AGENTS.md
.github/: AGENTS.md
.opencode/: AGENTS.md  settings.jsonc
config/: __init__.py  akshare_proxy_patch_settings.py  mcp_settings.py  settings.py
data/: __init__.py  akshare_client.py  client.py
indicators/: __init__.py  engine.py
mcp_server/: __init__.py  bootstrap.py  context.py  metadata.py  results.py
mcp_server/tools/: __init__.py  common.py
mcp_server/tools/sectors/: fund_flow.py  overview.py  technical.py
mcp_server/tools/stocks/: fund_flow.py  fundamental.py  news.py  technical.py
models/: __init__.py  mcp_tools.py
models/mcp_tools/: __init__.py  common.py
models/mcp_tools/sectors/: fund_flow.py  overview.py  technical.py
models/mcp_tools/stocks/: fund_flow.py  fundamental.py  news.py  technical.py
openspec/changes/base-arch-uv-pydantic-akshare-ta-lib/: design.md  proposal.md  tasks.md
openspec/changes/mcp-basic-features/: design.md  proposal.md  tasks.md
services/: market_service.py
tests/: test_akshare_client.py  test_akshare_proxy_patch_settings.py  test_config.py  test_market_service.py  test_market_service_rounding.py  test_mcp_formatting.py  test_mcp_models.py  test_mcp_server_bootstrap.py  test_mcp_tool_error_results.py
utils/: mcp_formatting.py  retry.py
utils/mcp_formatting/: __init__.py  common.py
utils/mcp_formatting/sectors/: fund_flow.py  overview.py  technical.py
utils/mcp_formatting/stocks/: fund_flow.py  fundamental.py  news.py  (+1 more)
(+7 files in other folders)
