[tool.ruff]
fix = true

[tool.ruff.format]
preview = true

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ty.src]
include = [
    "config",
    "data",
    "indicators",
    "models",
    "services",
    "tests",
    "utils",
    "main.py",
    "mcp_app.py",
]
exclude = [".agents/**"]


[project]
name = "trading-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.18.21",
    "mcp[cli]>=1.9.4",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.2.1",
    "ta-lib>=0.6.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
